S fix tooltip position on edit mode, disable <Numbers> on pause mode, light mode default when no localStorage initialized, debug for undo issue on prod. increase size of candidates on small viewports.

--- a/src/sudoku/cell/candidates/Candidates.scss
+++ b/src/sudoku/cell/candidates/Candidates.scss
@@ -14,12 +14,13 @@
 
   @media screen and (max-width: 500px) {
     & {
-      font-size: 0.3rem;
+      font-size: .5rem;
+      font-weight: 900;
     }
   
     &__candidate {
       padding: 2px;
-      width: .375rem;
+      width: .5rem;
     }
   }
 }
